add pagination and tabs to both incoming and own offers